# SoAPy

./: .gitattributes  .lgtm.yml  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml  setup.cfg
.github/: CONTRIBUTING.md
.github/workflows/: CI.yaml
SoAPy/: __init__.py  analysis.py  collect_data.py  functions.py  functions_copy.py  generate_files.py  get_geometry.py  plotting.py
SoAPy/data/: G09_sub_SLURM.sh  submit.py
SoAPy/data/basis_sets/: R-ORP.gbs  augD-3-21G.gbs  augT3-3-21G.gbs  rDPS.gbs
SoAPy/data/submission_and_input_files/: G09_sub_SLURM.sh
SoAPy/input_examples/slurm_and_input_generation_examples/: example_input_for_h5_conversion.py  example_input_from_geometry.py  example_input_from_optimization.py  example_input_from_trajectory.py  example_input_using_optimization.py
SoAPy/old-scripts/: SoAPy_input_example.py  SoAPy_output_example.py  test_SoAPy.py
SoAPy/old-scripts/input_examples/: SoAPy_input_example_012524.py  SoAPy_input_from_optimization.py  SoAPy_input_from_traj.py  SoAPy_input_with_controlable_parameters.py
SoAPy/tests/: SoAPy_spectrum_example.py  test_000_import-test.py  test_001_set-options-test.py  test_002-coords-from-input.py
SoAPy/tests/CI-tests/: 000-test-import.py  001-set_options-test.py  002-test-coords-from-input.py  __init__.py
SoAPy/tests/input_examples/: SoAPy_data_012524.py  SoAPy_input_from_geom.py
devtools/: README.md
devtools/conda-envs/: SoAPy.yaml  test_env.yaml
docs/: Makefile  README.md  api.rst  conf.py  getting_started.rst  index.rst  make.bat
(+72 files in other folders)
