[build-system]
requires = ["hatchling >= 1.9", "versioningit~=2.0"]
build-backend = "hatchling.build"

# Self-descriptive entries which should always be present
# https://packaging.python.org/en/latest/specifications/declaring-project-metadata/

[project]
name = "SoAPy"
description = "A package for research on SOlvation Algorithms in PYthon, SoAPy."

readme = "README.md"
authors = [
    { name = "Brendan Shumberger", email = "bshumberger@vt.edu" }
]
license = { text = "BSD-3-Clause" }
# See https://pypi.org/classifiers/
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
]
requires-python = ">=3.11"
dependencies = [
    "numpy",
    "scipy",
    "matplotlib",
    "h5py",
    "pandas",
    "requests"
]



[project.optional-dependencies]
test = [
  "pytest>=6.1.2",
  "pytest-runner"
]

[tool.hatch.version]
path = "SoAPy/__init__.py"
pattern = "BUILD = 'b(?P<version>[^']+)'"

[tool.versioningit]
default-version = "1+unknown"

[tool.versioningit.format]
distance = "{base_version}+{distance}.{vcs}{rev}"
dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"
distance-dirty = "{base_version}+{distance}.{vcs}{rev}.dirty"

[tool.versioningit.vcs]
# The method key:
method = "git"  # <- The method name
# Parameters to pass to the method:
match = ["*"]
default-tag = "1.0.0"

[tool.versioningit.write]
file = "SoAPy/_version.py"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]